packages/toolbars-ui/web/src/components/AddPluginMenu/plugin-menu-button.scss
@import '~wix-rich-content-common/dist/statics/styles/mixins';
@import '~wix-rich-content-common/dist/statics/styles/palette';

.addPluginButton {
  cursor: pointer;
  border: none;
  background-color: transparent;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  &:hover {
    background-color: rgba(var(--ricos-settings-action-color-tuple, $fallbackColorTuple), 0.06);
  }
}

